RESOLVED FIXED173888
[JSC] Do not touch VM after notifying Ready in DFG::Worklist
https://bugs.webkit.org/show_bug.cgi?id=173888
Summary [JSC] Do not touch VM after notifying Ready in DFG::Worklist
Yusuke Suzuki
Reported 2017-06-27 14:25:39 PDT
[JSC] Do not touch VM after notifying Ready in DFG::Worklist
Attachments
Patch (1.60 KB, patch)
2017-06-27 14:28 PDT, Yusuke Suzuki
no flags
Patch (1.62 KB, patch)
2017-06-27 14:33 PDT, Yusuke Suzuki
saam: review+
Yusuke Suzuki
Comment 1 2017-06-27 14:28:36 PDT
Build Bot
Comment 2 2017-06-27 14:31:48 PDT
Attachment 313944 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/ChangeLog:9: Please consider whether the use of security-sensitive phrasing could help someone exploit WebKit: dangling pointer [changelog/unwantedsecurityterms] [3] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Yusuke Suzuki
Comment 3 2017-06-27 14:33:42 PDT
Saam Barati
Comment 4 2017-06-27 14:41:57 PDT
Can you unmark the test as flaky too?
Yusuke Suzuki
Comment 5 2017-06-27 17:43:05 PDT
(In reply to Saam Barati from comment #4) > Can you unmark the test as flaky too? Sure!
Yusuke Suzuki
Comment 6 2017-06-27 17:45:26 PDT
(In reply to Yusuke Suzuki from comment #5) > (In reply to Saam Barati from comment #4) > > Can you unmark the test as flaky too? > > Sure! It seems that existing test marking is just Slow due to its slowness.
Yusuke Suzuki
Comment 7 2017-06-27 17:46:54 PDT
Note You need to log in before you can comment on or make changes to this bug.