[JSC] Do not touch VM after notifying Ready in DFG::Worklist https://bugs.webkit.org/show_bug.cgi?id=173888

Reviewed by Saam Barati.

After notifying Plan::Ready and releasing Worklist lock, VM can be destroyed.
Thus, Plan::vm() can return a destroyed VM. Do not touch it.
This causes occasional SEGV / assertion failures in workers/bomb test.

* dfg/DFGWorklist.cpp:

Canonical link: https://commits.webkit.org/190733@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218856 268f45cc-cd09-0410-ab3c-d52691b4dbfc